--- a/webportal/src/app/job/job-view/job-detail-table.component.ejs
+++ b/webportal/src/app/job/job-view/job-detail-table.component.ejs
@@ -24,7 +24,7 @@
     <td><%= convertState(hjss) %></td>
     <td>
       <% if (hjss === 'Waiting' || hjss === 'Running') { %>
-        <button class="btn btn-default btn-xs" onclick="stopJob('<%= jobName %>')">Stop</button>
+        <button class="btn btn-default btn-xs" onclick="stopJob('<%= legacy ? '' : namespace || username %>', '<%= jobName %>')">Stop</button>
       <% } else { %>
         <button class="btn btn-default btn-xs" disabled>Stop</button>
       <% } %>
